@@ -25,6 +25,8 @@ Version 1.0.8.9
      inside of non-string parts
   -  Introduced querying supported/known languages directly
   -  Introduced querying full language names without loading the language file
+  -  Improvements to language files (BenBE)
+     * Added loads of keywords for generic SQL highlighting (Jürgen Thomas)
 Version 1.0.8.8
   -  Added language files
      * ChaiScript (Jason Turner & Jonathan Turner)
